[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "miadbviz"
version = "0.0.1"
description = "Short Description TODO"
authors = [
    {name = "Sarah Szwarc", email = "sarah.szwarc@universite-paris-saclay.fr"},
]
requires-python = "<3.12.0,>=3.11.0"
keywords = [
    "knowledgeExtraction",
    "spectralInformation",
    "queryingSystem",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    "Framework :: tox",
    "Framework :: Sphinx",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
license = {text = "LICENSE"}
readme = "README.rst"

dependencies = [
    "click>=8.3.0,<9.0.0",
    "gensim>=4.3.2,<5.0.0",
    "matchms>=0.27.0,<1.0.0", # blocked because of gensim
    "matplotlib>=3.7.2,<4.0.0",
    "ms2deepscore>=2.5.0,<3.0.0", # blocked because of gensim
    "numpy>=1.26.4,<2.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "pandas>=2.2.3,<3.0.0",
    "rdkit>=2024.9.4,<2025.0.0", # blocked because of matchms
    "scipy==1.11.0", # blocked because of gensim
    "seaborn>=0.13.2,<1.0.0",
    "spec2vec>=0.8.0,<1.0.0",
]

[options.entry_points]
console_scripts = "mia-visualization = mia-visualization.cli:main"

[options.package_data]
miadbviz = "data/.*"

[project.urls]
homepage = "https://github.com/spectra-to-knowledge/miadb-visualization"
repository = "https://github.com/spectra-to-knowledge/miadb-visualization"
documentation = "https://github.com/spectra-to-knowledge/miadb-visualization"

[project.scripts]
mia-visualization = "mia-visualization.cli:main"


[dependency-groups]
dev = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.6.15",
    "mkdocstrings[python]>=0.30.0",
    "pre-commit>=2.20.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["miadbviz"]

[tool.deptry]
[tool.deptry.per_rule_ignores]
DEP002 = ["openpyxl",]

[tool.pytest.ini_options]
pythonpath = [
  "miadbviz"
]
testpaths = [
    "tests"
]

[tool.ruff]
fix = true

[tool.ruff.format]
preview = true

[tool.ty.rules]
unresolved-import = "ignore"
