[project]
name = "miadbviz"
version = "0.1.0"
description = "Visualization utilities for the MIADB"
readme = "README.rst"
requires-python = "==3.13.*"  # blocked because of matchms
license = { text = "LICENSE" }
authors = [
  { name = "Sarah Szwarc", email = "sarah.szwarc@universite-paris-saclay.fr" },
]
keywords = [
  "knowledgeExtraction",
  "queryingSystem",
  "spectralInformation",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Framework :: Pytest",
  "Framework :: Sphinx",
  "Framework :: tox",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "click>=8.3.1",
  "gensim>=4.4.0",
  "matchms>=0.31.0",
  "matplotlib>=3.10.8",
  "ms2deepscore>=2.7.0",
  "numpy>=2.2.6",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "rdkit>=2024.9.6",  # blocked because of matchms
  "scipy>=1.17.0",
  "seaborn>=0.13.2",
  "spec2vec>=0.9.1",
]

[project.urls]
documentation = "https://github.com/spectra-to-knowledge/miadb-visualization"
homepage = "https://github.com/spectra-to-knowledge/miadb-visualization"
repository = "https://github.com/spectra-to-knowledge/miadb-visualization"

[project.scripts]
mia-visualization = "mia-visualization.cli:main"

[dependency-groups]
dev = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.1",
  "mkdocstrings[python]>=1.0.2",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["miadbviz"]

[tool.deptry]
[tool.deptry.per_rule_ignores]
DEP002 = [
  "openpyxl",
]

[tool.ruff]
fix = true

[tool.ruff.format]
preview = true

[tool.ty.rules]
unresolved-import = "ignore"
